# mygene-mcp

./: README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: configure_claude.py
src/mygene_mcp/: __init__.py  client.py  server.py
src/mygene_mcp/tools/: __init__.py  advanced.py  annotation.py  batch.py  chemical.py  disease.py  export.py  expression.py  go.py  homology.py  interval.py  metadata.py  pathway.py  query.py  variant.py
tests/: conftest.py  test_advanced_tools.py  test_annotation_tools.py  test_batch_tools.py  test_chemical_tools.py  test_disease_tools.py  test_export_tools.py  test_expression_tools.py  test_go_tools.py  test_homology_tools.py  test_interval_tools.py  test_metadata_tools.py  test_pathway_tools.py  test_query_tools.py  test_variant_tools.py
