[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mygene-mcp"
version = "0.2.0"
description = "Model Context Protocol server for MyGene.info API with comprehensive gene data tools"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Zhong Ren", email = "zhong.ren@hotmail.com"}]
dependencies = [
    "mcp",
    "httpx",
    "pydantic",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mygene-mcp = "mygene_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mygene_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"